tdf#102625: fix Formula editor breaks surrogate pairs

Change-Id: I616cda97367a8fdfb6ae10eb687ca7490a943692
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/93684
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>